--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
-istatd (0.91-2) UNRELEASED; urgency=medium
+istatd (0.91-3) UNRELEASED; urgency=medium
 
   [ Luc Lanthier ]
   * init.d scripts service namespace conflict resolved
+  * packaging rules adjusted according to debian/stretch needs: 
+    make directories for install during packaging
+  * use -std=gnu++98 standard for compile
 
- -- Luc Lanthier <llanthier@imvu.com>  Wed, 19 Jul 2017 14:17:51 -0700
+ -- Luc Lanthier <llanthier@imvu.com>  Fri, 08 Dec 2017 15:20:53 -0800
 
 istatd (0.91-1) UNRELEASED; urgency=low
 
